--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.6",
+    "classnames": "^2.5.1",
     "fabric": "^6.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -40,11 +41,16 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
+    "postcss-lit": "^1.1.1",
     "prettier": "^3.3.3",
     "stylelint": "^16.10.0",
     "stylelint-config-prettier": "^9.0.5",
+    "stylelint-config-recommended-scss": "^14.1.0",
     "stylelint-config-standard": "^36.0.1",
+    "stylelint-config-standard-scss": "^13.1.0",
+    "stylelint-order": "^6.0.4",
     "stylelint-prettier": "^5.0.2",
+    "stylelint-scss": "^6.8.1",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10"
