--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "fabric": "^6.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-flow-renderer": "^10.3.17",
     "react-konva": "^18.2.10",
     "sass": "^1.80.5",
     "vite-plugin-svgr": "^4.2.0"
