--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.6",
+    "@xyflow/react": "^12.3.4",
     "classnames": "^2.5.1",
     "fabric": "^6.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-flow-renderer": "^10.3.17",
     "react-konva": "^18.2.10",
     "sass": "^1.80.5",
     "vite-plugin-svgr": "^4.2.0"
